--- a/style.css
+++ b/style.css
@@ -106,10 +106,10 @@ button.one{
 
 .testimonial-box {
   padding: 50px 0 50px 0;
-  margin: 50px 0;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   border-radius: 15px;
-  width: 75%;
+  width: 80%;
+  margin: 30px auto auto auto;
 }
 
 .testimonial-box:nth-child(1),
@@ -120,7 +120,6 @@ button.one{
    grid-template-areas:
       "left right";
    align-content: center;
-   margin: 30px 0;
 }
 
 
@@ -152,6 +151,7 @@ button.one{
   color: hsl(208, 11%, 55%);
   margin-top: 15px;
   font-size: 1rem;
+  max-width: 450px;
 }
 
 .img{
@@ -163,9 +163,9 @@ aside.testimonial-box {
    text-align: center;
    max-width: 575.5px;
    padding: 40px 2vw;
-   margin: 20px auto auto auto;
    transform: translateY(65px);
    background-color: white;
+   margin: 20px auto auto auto;
 }
 
 .second aside > h2 {
@@ -184,16 +184,29 @@ aside button{
 .third{
   background-color: hsl(192, 100%, 9%);
   color: #fff;
+  padding: 80px 40px 10px;
 }
 
-.foot {
-  text-align: left;
-  flex-direction: column;
-  margin: 0;
+.container-fluid{
+  margin: 50px 120px 40px 80px;
+}
+
+.logo-2{
+  width: 150px;
+  margin-bottom: 20px;
+}
+
+.foot{
+  display: flex;
+  justify-content: space-between;
+}
+
+.foot p{
+  max-width: 326px;
 }
 
 .foot ul {
-  padding: 5px;
+    list-style: none;
 }
 
 .foot ul li {
@@ -201,11 +214,21 @@ aside button{
   margin-bottom: 20px;
 }
 
+.icon{
+  padding-right: 10px;
+}
+
 ion-icon {
-  border: 1px solid white;
-  border-radius: 20px;
-  padding: 8px;
-  margin-right: 20px;
+    border: 1px solid white;
+    border-radius: 20px;
+    padding: 8px;
+    margin-right: 20px;
+}
+
+.copyright{
+  text-align: right;
+  margin-bottom: 30px;
+  font-size: 11px;
 }
 
 .attribution {
