--- a/style.css
+++ b/style.css
@@ -239,3 +239,34 @@ ion-icon {
 .attribution a {
   color: grey;
 }
+
+@media (max-width: 1028px) {
+
+  .first{
+    background: url("images/bg-hero-mobile.svg") hsl(193, 100%, 96%);
+    background-size: cover;
+    background-position: center center;
+    padding: 10px 0 30px 0;
+  }
+
+  .container-fluid{
+    margin: 30px 0 0 0;
+  }
+  .foot {
+    text-align: left;
+    flex-direction: column;
+    margin: 0;
+  }
+
+  .foot ul {
+    padding: 5px;
+    width: 100%;
+  }
+
+  .copyright{
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+
+}
