--- a/style.css
+++ b/style.css
@@ -78,15 +78,11 @@ button{
   padding: 18px 60px;
 }
 
-button.one{
-  padding: 10px 40px;
-  margin-left: 50px;
-}
-
 .one{
   background-color: white;
   float: right;
-  margin-right: 40px;
+  margin: auto 50px;
+  padding: 10px 40px;
 }
 
 .mock{
@@ -242,12 +238,44 @@ ion-icon {
 
 @media (max-width: 1028px) {
 
+  .logo{
+    margin: 12px 0 0 12px;
+  }
+
+  .one{
+    margin: 10px;
+  }
+
   .first{
     background: url("images/bg-hero-mobile.svg") hsl(193, 100%, 96%);
     background-size: cover;
     background-position: center center;
     padding: 10px 0 30px 0;
+
   }
+
+  .header-content{
+      display: inline;
+  }
+
+  .header-text h1 {
+   font-size: 1.68rem;
+   max-width: 335px;
+   margin: 80px auto 20px auto;
+   text-align: center;
+ }
+
+ .header-text p {
+   max-width: 280px;
+   margin: 0 auto 10px auto ;
+   text-align: center;
+ }
+
+
+ .mock{
+   width: 90%;
+   margin: 60px 20px auto;
+ }
 
   .container-fluid{
     margin: 30px 0 0 0;
