--- a/style.css
+++ b/style.css
@@ -14,9 +14,6 @@ h1,h2 {
   font-family: 'Poppins', sans-serif;
 }
 
-h2 {
-  font-size: 1.215rem;
-}
 
 p {
   font-size: 0.937rem;
@@ -108,6 +105,7 @@ button{
   margin: 30px auto auto auto;
 }
 
+
 .testimonial-box:nth-child(1),
 .testimonial-box:nth-child(2),
 .testimonial-box:nth-child(3) {
@@ -165,7 +163,7 @@ aside.testimonial-box {
 }
 
 .second aside > h2 {
-   font-size: 1.296rem;
+   font-size: 1.62rem;
    max-width: unset;
    margin-right: auto;
    margin-left: auto;
@@ -174,7 +172,8 @@ aside.testimonial-box {
 aside button{
    padding: 1rem 4.3rem;
    font-size: 0.823rem;
-   margin-top: 10px;
+   margin-top: 20px;
+   font-weight: bold;
 }
 
 .third{
@@ -255,26 +254,58 @@ ion-icon {
   }
 
   .header-content{
-      display: inline;
+    display: inline;
   }
 
   .header-text h1 {
-   font-size: 1.68rem;
-   max-width: 335px;
-   margin: 80px auto 20px auto;
-   text-align: center;
+    font-size: 1.68rem;
+    max-width: 335px;
+    margin: 80px auto 20px auto;
+    text-align: center;
  }
 
  .header-text p {
-   max-width: 280px;
-   margin: 0 auto 10px auto ;
-   text-align: center;
+    max-width: 280px;
+    margin: 0 auto 10px auto ;
+    text-align: center;
  }
 
-
  .mock{
-   width: 90%;
-   margin: 60px 20px auto;
+    width: 90%;
+    margin: 60px 20px auto;
+ }
+
+ .testimonial-box:nth-child(1),
+ .testimonial-box:nth-child(2),
+ .testimonial-box:nth-child(3) {
+    display: block;
+ }
+
+ .img{
+   width: 250px;
+   margin: 20px;
+ }
+
+ .testimonial-text {
+    text-align: center;
+ }
+
+ .testimonial-box h2{
+   margin-top: 40px;
+   font-size: 1.2rem;
+ }
+
+ .testimonial-text p{
+   font-size: 0.8rem;
+ }
+
+ .second aside > h2{
+    font-size: 1rem;
+ }
+
+ aside button {
+    font-size: 0.678rem;
+    padding: 1rem 3.8rem;
  }
 
   .container-fluid{
